source/stylesheets/site.css.scss
body {
  background-color: #9B94BA;
  color: #000;
  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", "Fira Sans",
    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
  padding: 18vh 1rem;
  text-align: center;
}

a {
  color: rgba(#000, 0.7);

  &:focus,
  &:hover {
    color: rgba(#000, 0.6);
  }
}

.wrapper {
  width: 600px;
  margin: 0 auto;
  text-align: left;
}

h1 {
  font-size: 3.5rem;
  text-transform: uppercase;
  font-weight: 800;
  border-bottom: 3px solid black;
  margin-bottom: 0;
}

small {
  font-size: 1rem;
}

h2 {
  text-transform: uppercase;
  font-size: 3rem;
  margin-bottom: 0;
}

h3 {
  text-transform: uppercase;
  font-size: 2rem;
  margin-bottom: 0;
}

p.intro {
  font-size: 1.4rem;
  margin-top: 0;
}

p.outro {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 1.4rem;
  margin-top: 0;
}

hr {
  border: 0;
  border-bottom: 3px solid black;
  margin: 2rem 0;
}


p, li {
  font-size: 1.2rem;
}


footer {
  text-align: center;
  margin-top: 10rem;
}

// From https://codepen.io/clowny3/pen/bpvzNz
// Thanks to https://codepen.io/clowny3
// The bits you want to see
.beat-loader{
  stroke: #000;
  stroke-dasharray: 175;
  stroke-dashoffset: 350;
  animation: draw 1.4s infinite linear;
}

// The animation
@keyframes draw {
  to{
    stroke-dashoffset: 0;
  }
}

